code25_all/scala/9888804.txt
 scala> for (i:Long <- 0 to 10000000L) {}


      <console>:19: error: type mismatch;<br>
      found   : Long(10000000L)
      required: Int
              for (i:Long <- 0 to 10000000L) {}
                                  ^



      <console>:19: error: type mismatch;<br>
      found   : Long(10000000L)
      required: Int
              for (i:Long <- 0 to 10000000L) {}
                                  ^


 scala> for (i <- 0 to 10000000L) {}


      <console>:19: error: type mismatch;
      found   : Long(10000000L)
      required: Int
          for (i <- 0 to 10000000L) {}
                         ^



      <console>:19: error: type mismatch;
      found   : Long(10000000L)
      required: Int
          for (i <- 0 to 10000000L) {}
                         ^


 scala> for (i:Long <- 0L to 10000000L) {} 
 scala> for (i <- 0L to 10000000L) {} 
